@@ -1,20 +1,22 @@
 package com.ale.starblog.framework.core.oss.support;
 
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.http.HttpUtil;
 import org.springframework.stereotype.Component;
 
 import java.lang.reflect.Field;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 /**
- * 富文本对象上传key解析器
+ * 字符串对象上传key解析器
  *
  * @author Ale
  * @version 1.0.0 2025/10/17 16:17
  */
 @Component
-public class RichTextOssUploadKeyResolver extends RichTextOssUploadKeySupport implements OssUploadKeyResolver {
+public class StringOssUploadKeyResolver extends RichTextOssUploadKeySupport implements OssUploadKeyResolver {
 
     @Override
     public Collection<String> resolveKeys(Field field, Object value) {
@@ -24,7 +26,15 @@ public class RichTextOssUploadKeyResolver extends RichTextOssUploadKeySupport im
                 return null;
             }
 
-            return this.isRichTextField(field) ? extractKeys(content) : List.of((String) value);
+            if (this.isRichTextField(field)) {
+                return this.extractKeys(content);
+            }
+
+            // 不处理外部链接
+            if (HttpUtil.isHttp(content) || HttpUtil.isHttps(content)) {
+                return Collections.emptyList();
+            }
+            return List.of(content);
         }
 
         return null;
